Added a post with simple definition

--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -18,30 +18,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## What is the wide baseline stereo?\n",
-    "\n",
-    "\n",
-    "![](2020-03-27-intro_files/att_00001.png \"Two images of the same place, taken from different viewpoint and in different times. The building: Kyiv doll theater.\")\n",
-    "\n",
-    "Imagine you have a nice photo you took in autumn and would like to take one in summer, from exactly the same position. How would you achieve that? You come to the place and start to compare what you see on camera screen and on printed photo. Specifically, you probably would try to locate the same objects, e.g. \"that high lamppost\" or \"this wallclock\". Then one would estimate difference how they are arranged on the old photo and camera screen, e.g. the lamppost is occluding the clock on the tower\". That would give you an idea of how you should move your camera, i.e. relative camera pose. \n",
-    "\n",
-    "\n",
-    "Now, what if you don't have that photo as is, but can have only a text description of it instead? In that case, it is likely, that you would try to list some features and objects one can see in the photo, together with some disntinctive descriptions, like \"long staircase on the left side\" and \"Nice building with dark roof and two towers\". You would also tell, where this objects are in the photo, e.g.\"The lamp posts are at the left, the closer to the viewer is in front of the left tower with clock. Tower with the clock is separate from the building itself\".\n",
-    "\n",
-    "Then, when arriving on the spot, you would try to find those objects, match them to the description you have and, again, try to estimate the where you should go. \n",
-    "\n",
-    "What I have just described is known as wide baseline stereo problem and the common way solving it.\n",
-    "\n",
-    "\n",
-    "1. Compute interest points/regions (\"trees\", \"statues\", etc) in all images independently\n",
-    "\n",
-    "2. For each interest point/region compute a descriptor of their neigborhood (\"statue with blue left ear\").\n",
-    "\n",
-    "3. Establish tentative correspondences between interest points based on their descriptors.\n",
-    "\n",
-    "4. Robustly estimate geometric relation between two images based on tentative correspondences. \"If the camera is here, then this tree should be behind the statue\"."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -49,10 +26,11 @@
    "source": [
     "## Rise of Wide Baseline Stereo\n",
     "\n",
-    "A bit more formally, the wide baseline stereo (WBS) is a process of establishing correspondences between pixels and/or regions between images depicting the same object or scene and estimation geometric relationship between the cameras, which produced that images. It is the building block of many popular computer vision application, where spatial localization or 3D world understanding is required. \n",
+    "The wide baseline stereo (WBS) is a process of establishing correspondences between pixels and/or regions between images depicting the same object or scene and estimation geometric relationship between the cameras, which produced that images. It is the building block of many popular computer vision application, where spatial localization or 3D world understanding is required. \n",
+    "\n",
+    "If the wide baseline stereo is a new concept for you, I recommend checking the [examplanation in simple terms](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2021/1/09/wbs-in-simple-terms.html) of it here\n",
     "\n",
     "![](00_intro_files/match_doll.png \"Correspondences between two views found by wide baseline stereo algorithm. Photo and doll created by Olha Mishkina\")\n",
-    "\n",
     "\n",
     "\n",
     "**Where does wide baseline stereo come from?** \n",
