fix the thumbnail

--- a/_notebooks/2021-01-09-wxbs-in-simple-terms.ipynb
+++ b/_notebooks/2021-01-09-wxbs-in-simple-terms.ipynb
@@ -7,7 +7,7 @@
     "# \"Wide multiple baseline stereo in simple terms\"\n",
     "> \"Or how to explain it to everyone\"\n",
     "- toc: false\n",
-    "- image: images/doll_wbs_300.png\n",
+    "- image: images/doll-theater.jpg\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
