--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -18,17 +18,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Rise of Wide Baseline Stereo\n",
     "\n",
     "The wide baseline stereo (WBS) is a process of establishing correspondences between pixels and/or regions between images depicting the same object or scene and estimation geometric relationship between the cameras, which produced that images. It is the building block of many popular computer vision application, where spatial localization or 3D world understanding is required. \n",
     "\n",
-    "If the wide baseline stereo is a new concept for you, I recommend checking the [examplanation in simple terms](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2021/1/09/wbs-in-simple-terms.html) of it here\n",
+    "If the wide baseline stereo is a new concept for you, I recommend checking the [examplanation in simple terms](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2021/01/09/wxbs-in-simple-terms.html)\n",
     "\n",
     "![](00_intro_files/match_doll.png \"Correspondences between two views found by wide baseline stereo algorithm. Photo and doll created by Olha Mishkina\")\n",
     "\n",
