--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -1,4 +1,48 @@
 
+@inproceedings{QuadInterp2002,
+   title = {Invariant Features from Interest Point Groups},
+   author = {Brown, M. and Lowe, D.},
+   year = {2002},
+   pages = {23.1-23.10},
+   booktitle = {BMVC}
+}
+
+@inproceedings{RANSACSurvey2009,
+  author = {Choi, Sunglok and Kim, Taemin and Yu, Wonpil},
+  booktitle = {BMVC},
+  title = {Performance Evaluation of RANSAC Family.},
+  year = {2009}
+}
+
+
+@inproceedings{AbsPositionCNN2020,
+      title={How Much Position Information Do Convolutional Neural Networks Encode?}, 
+      author={Md Amirul Islam and Sen Jia and Neil D. B. Bruce},
+      year={2020},
+booktitle={ICLR}
+}
+
+@inproceedings{aknn1997,
+author = {Beis, Jeffrey S. and Lowe, David G.},
+title = {Shape Indexing Using Approximate Nearest-Neighbour Search in High-Dimensional Spaces},
+year = {1997},
+isbn = {0818678224},
+publisher = {IEEE Computer Society},
+address = {USA},
+booktitle = {CVPR},
+pages = {1000}
+}
+
+
+@inproceedings{forstner1987fast,
+  title={A fast operator for detection and precise location of distinct points, corners and centres of circular features},
+  author={F{\"o}rstner, Wolfgang and G{\"u}lch, Eberhard},
+  booktitle={Proc. ISPRS intercommission conference on fast processing of photogrammetric data},
+  pages={281--305},
+  year={1987}
+}
+
+
 @INPROCEEDINGS{Pritchett1998,
   author = {Pritchett, P. and Zisserman, A.},
   title = {Wide baseline stereo matching},
@@ -413,6 +457,84 @@ booktitle = {ECCV}
   Year                     = {1978}
 }
 
+@article{Lindeberg1998,
+ author = {Lindeberg, Tony},
+ title = {Feature Detection with Automatic Scale Selection},
+ journal = {Int. J. Comput. Vision},
+ volume = {30},
+ number = {2},
+ month = nov,
+ year = {1998},
+ issn = {0920-5691},
+ pages = {79--116} 
+} 
+
+@article{Lindeberg1993,
+ author = {Lindeberg, Tony},
+ title = {Detecting Salient Blob-like Image Structures and Their Scales with a Scale-space Primal Sketch: A Method for Focus-of-attention},
+ journal = {Int. J. Comput. Vision},
+ issue_date = {Dec. 1993},
+ volume = {11},
+ number = {3},
+ month = dec,
+ year = {1993},
+ issn = {0920-5691},
+ pages = {283--318}
+} 
+@inproceedings{D2Net2019,
+  title = {{D2-Net: A Trainable CNN for Joint Detection and Description of Local Features}},
+  author={M. Dusmanu and I. Rocco and T. Pajdla and M. Pollefeys and J. Sivic and A. Torii and T. Sattler},
+  booktitle={CVPR},
+  year={2019}
+}
+
+@Article{RANSAC1981,
+  Title                    = {{Random sample consensus: a paradigm for model fitting with applications to image analysis and automated cartography}},
+  Author                   = {Fischler, Martin A. and Bolles, Robert C.},
+  Journal                  = {Commun. ACM},
+  Year                     = {1981},
+
+  Month                    = {jun},
+  Number                   = {6},
+  Pages                    = {381--395},
+  Volume                   = {24}
+}
+
+@inproceedings{R2D22019,
+   author    = {J{\'{e}}r{\^{o}}me Revaud and
+               Philippe Weinzaepfel and
+               C{\'{e}}sar Roberto de Souza and
+               Noe Pion and
+               Gabriela Csurka and
+               Yohann Cabon and
+               Martin Humenberger},
+title = {{R2D2: Repeatable and Reliable Detector and Descriptor}},
+  booktitle = {NeurIPS},
+  year = {2019}
+}
+
+
+@article {cv4action2019,
+	author = {Zhou, Brady and Kr{\"a}henb{\"u}hl, Philipp and Koltun, Vladlen},
+	title = {Does computer vision matter for action?},
+	volume = {4},
+	number = {30},
+	year = {2019},
+	journal = {Science Robotics}
+}
+
+
+@article{Tuytelaars2008,
+ author = {Tuytelaars, Tinne and Mikolajczyk, Krystian},
+ title = {Local Invariant Feature Detectors: A Survey},
+ journal = {Found. Trends. Comput. Graph. Vis.},
+ issue_date = {January 2008},
+ volume = {3},
+ number = {3},
+ month = jul,
+ year = {2008},
+ pages = {177--280}
+} 
 
 @InProceedings{TFeat2016,
   author    = {Vassileios Balntas and Edgar Riba and Daniel Ponsa and Krystian Mikolajczyk},
@@ -731,6 +853,27 @@ pages = {835–846},
   pages = "1147--1163",
   year = "2015"
 }
+@InProceedings{PROSAC2005,
+  Title                    = {Matching with PROSAC -- Progressive Sample Consensus},
+  Author                   = {Chum, Ondrej and Matas, Jiri},
+  Booktitle                = {Proceedings of the 2005 IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR'05) - Volume 1 - Volume 01},
+  Year                     = {2005},
+
+  Address                  = {Washington, DC, USA},
+  Pages                    = {220--226},
+  Publisher                = {IEEE Computer Society},
+  Series                   = {CVPR '05}
+}
+
+@article{SIFT2004,
+ author = {Lowe, David G.},
+ title = {Distinctive Image Features from Scale-Invariant Keypoints},
+ journal = {International Journal of Computer Vision ({IJCV})},
+ volume = {60},
+ number = {2},
+ year = {2004},
+ pages = {91--110}
+} 
 
 @inproceedings{ORB2011,
   author = {E. Rublee and V. Rabaud and K. Konolidge and G. Bradski},
