--- a/_notebooks/2021-01-09-wxbs-in-simple-terms.ipynb
+++ b/_notebooks/2021-01-09-wxbs-in-simple-terms.ipynb
@@ -19,18 +19,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is the wide baseline stereo?\n",
+    "## What is wide multiple baseline stereo?\n",
     "\n",
     "\n",
     "![](2020-03-27-intro_files/att_00001.png \"Two images of the same place, taken from different viewpoint and in different times. The building: Kyiv doll theater.\")\n",
     "\n",
-    "Imagine you have a nice photo you took in autumn and would like to take one in summer, from exactly the same spot. How would you achieve that? You come to the place and start to compare what you see on the camera screen and on the printed photo. Specifically, you would probably try to locate the same objects, e.g. \"that high lamppost\" or \"this wall clock\". Then one would estimate how differently they are arranged on the old photo and camera screen. For example, by checking whether the lamppost is occluding the clock on the tower, or not. That would give an idea of how you should move your camera, i.e. relative camera pose. \n",
+    "Imagine you have a nice photo you took in autumn and would like to take one in summer, from the same spot. How would you achieve that? You go to the place and you start to compare what you see on the camera screen and on the printed photo. Specifically, you would probably try to locate the same objects, e.g., \"that high lamppost\" or \"this wall clock\". Then one would estimate how differently they are arranged on the old photo and camera screen. For example, by checking whether the lamppost is occluding the clock on the tower or not. That would give an idea of how you should move your camera.\n",
     "\n",
-    "Now, what if you do not have that photo as is, but can have only a description of it instead? In that case, it is likely that you would try to list features and objects in the photo. This can be together with descriptions, which are distinguishable. For example, \"long staircase on the left side”, \"The nice building with a dark roof and two towers\" or “top of the lampost”. It would be useful to also describe where these objects and features are pictured in the photo, \"The lamp posts are on the left, the closest to the viewer is in front of the left tower with a clock. The clock tower is not the part of the building and stands on its own\".\n",
+    "Now, what if you are not allowed to take that photo with you, because it is a museum photo and taking pictures is prohibited there. Instead you can create a description of it. In that case, it is likely that you would try to make a list of features and objects in the photo together with the descriptions, which are sufficient to distinguish the objects. For example, \"a long staircase on the left side\", \"The nice building with a dark roof and two towers\" or \"the top of the lampost\". It would be useful to also describe where these objects and features are pictured in the photo, \"The lamp posts are on the left, the closest to the viewer is in front of the left tower with a clock. The clock tower is not the part of the building and stands on its own\". Then when arriving, you would try to find those objects, match them to the description you have, and try to estimate where you should go. You repeat the procedure until the camera screen shows a picture which is fitting the description you have and the image you have in your memory.\n",
     "\n",
-    "Then, when arriving on the spot, you would try to find those objects, match them to the description you have, and try to estimate where you should go. You repeat the procedure until the camera screen shows a similar enough picture to what you have in mind. \n",
-    "\n",
-    "Congratulations! You just have successfully registered two images, which have a significant difference in viewpoint, appearance, and illumination. In the process of doing so, you have solved multiple times the wide multiple-baseline stereo problem (WxBS) -- estimating the relative camera pose from a pair of images, different in the many aspects, yet depicting the same scene.\n",
+    "Congratulations! You just have successfully registered the two images, which have a significant difference in viewpoint, appearance, and illumination. In the process of doing so, you were solving multiple times the wide multiple-baseline stereo problem (WxBS) -- estimating the relative camera pose from a pair of images, different in many aspects, yet depicting the same scene.\n",
     "\n",
     "Let us write down the steps, which we took.\n",
     "\n",
