--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -71,13 +71,10 @@
     "1. Compute interest points/regions in all images independently\n",
     "2. For each interest point/region compute a descriptor of their neigborhood (local patch).\n",
     "3. Establish tentative correspondences between interest points based on their descriptors.\n",
-    "4. Robustly estimate geometric relation between two images based on tentative correspondences with RANSAC."
+    "4. Robustly estimate geometric relation between two images based on tentative correspondences with RANSAC.\n",
+    "\n",
+    "The reasoning behind each step is described in [this separate post](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2021/02/11/WxBS-step-by-step.html)."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
