--- a/_notebooks/2021-01-09-wxbs-in-simple-terms.ipynb
+++ b/_notebooks/2021-01-09-wxbs-in-simple-terms.ipynb
@@ -40,7 +40,9 @@
     "\n",
     "4. Estimate, which direction one should move the camera to align the objects and features. \n",
     "\n",
-    "That is it! If you are interested in the formal definition, [check here](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2020/07/09/wxbs.html), and the [history of the WxBS is here](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2020/03/27/intro.html)."
+    "That is it!  detailed explanation of the each of the steps is [in this post](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2021/02/11/WxBS-step-by-step.html).  If you are interested in the formal definition, [check here](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2020/07/09/wxbs.html), and the [history of the WxBS is here](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2020/03/27/intro.html).\n",
+    "\n",
+    "\n"
    ]
   }
  ],
