--- a/_notebooks/2021-02-11-WxBS-step-by-step.ipynb
+++ b/_notebooks/2021-02-11-WxBS-step-by-step.ipynb
@@ -7,7 +7,7 @@
     "# \"WxBS step be step\"\n",
     "> \"Or why it is as it is\"\n",
     "- toc: false\n",
-    "- image: images/doll-theater.jpg\n",
+    "- image: images/matching-filtering_small.png\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
