--- a/_notebooks/2021-02-11-WxBS-step-by-step.ipynb
+++ b/_notebooks/2021-02-11-WxBS-step-by-step.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"WxBS step be step\"\n",
+    "# \"WxBS step by step\"\n",
     "> \"Or why it is as it is\"\n",
     "- toc: false\n",
     "- image: images/matching-filtering_small.png\n",
