--- a/_notebooks/2021-05-17-OpenCV-New-RANSACs.ipynb
+++ b/_notebooks/2021-05-17-OpenCV-New-RANSACs.ipynb
@@ -62,11 +62,11 @@
     "\n",
     "![image.png](2021-05-17-OpenCV-New-RANSACs_files/att_00000.png)\n",
     "\n",
-    "1. The first and main message -- **all new flags are much better than the old OpenCV implementation (green curve), which still a default option**.\n",
+    "1. The first and main message -- **all new flags are much better than the old OpenCV implementation (green curve, worst results), which still a default option**.\n",
     "\n",
-    "2. 10k iterations and USAC_ACCURATE gives you great results within 0.01 sec \n",
+    "2. 10k iterations and USAC_ACCURATE (red curve) gives you great results within 0.01 sec \n",
     "\n",
-    "3. All OpenCV advanced USACs are better than for the small/medium time budget (< 0.1 sec per image) than pydegensac.  \n",
+    "3. All OpenCV advanced USACs are better than for the small/medium time budget (< 0.1 sec per image) than pydegensac (blue curve).  \n",
     "4. The best methods for the higher budget are OpenCV USAC_MAGSAC and DEGENSAC from the pydegensac package.\n",
     "\n",
     "5. There is no point is using flag \"USAC_FAST\" it is always better to use USAC_DEFAULT, USAC_ACCURATE or USAC_MAGSAC.\n",
@@ -92,7 +92,7 @@
     "\n",
     "It is true, that tuning and evaluation of the method on the same dataset does not make any sense. However, let me defend my choice. Here are the arguments:\n",
     "\n",
-    "1. I do not want to compromise an integrity of the test set, which is the basis of the on-going competition [Image Matching Challenge 2021](https://www.cs.ubc.ca/research/image-matching-challenge/current/) with prize money. That is why I do not want to lead an information from the abovementioned test set and this is my primarly optimization objective. I also cannot tune the threshold on the \"training subset\", as both GoogleUrban and PragueParks do not have such. \n",
+    "1. I do not want to compromise an integrity of the test set, which is the basis of the on-going competition [Image Matching Challenge 2021](https://www.cs.ubc.ca/research/image-matching-challenge/current/) with prize money. That is why I do not want to leak information from the abovementioned test set and this is my primarly optimization objective. I also cannot tune the threshold on the \"training subset\", as both GoogleUrban and PragueParks do not have such. \n",
     "\n",
     "2. I am interested more in the rough speed-accuracy trade-off than the precise rankings of the methods. It is quite likely, that those methods, which have an small acuracy gap on the validation set, would switch on the test set -- as it happened with DEGENSAC and MAGSAC in our original paper. However, it is very unlikely, that method, which performs poorly on the validation set would magically outperform everyone on the test set. Again, see PyRANSAC vs DEGENSAC in the original paper. \n",
     "\n",
