updated RANSAC-eval test

--- a/_notebooks/2021-05-17-OpenCV-New-RANSACs.ipynb
+++ b/_notebooks/2021-05-17-OpenCV-New-RANSACs.ipynb
@@ -50,17 +50,17 @@
     "\n",
     "- USAC_DEFAULT – [LO-RANSAC](https://cmp.felk.cvut.cz/~chum/papers/chum-DAGM03.pdf) + degeneracy tests\n",
     "- USAC_FAST – [LO-RANSAC](https://cmp.felk.cvut.cz/~chum/papers/chum-DAGM03.pdf) + degeneracy tests. Fewer iterations in local optimization step than USAC_DEFAULT. Uses RANSAC score to maximize number of inliers and terminate earlier.\n",
-    "- USAC_ACCURATE. Implements [Graph-Cut RANSAC](https://cmp.felk.cvut.cz/~matas/papers/barath-2018-gc_ransac-cvpr.pdf) +  degeneracy tests.\n",
-    "- USAC_MAGSAC – [MAGSAC++](https://arxiv.org/abs/1912.05909) implementation.\n",
-    "- RANSAC -- OpenCV RANSAC implementation from the previous versions of the library, no  degeneracy tests\n",
+    "- USAC_ACCURATE. Implements [Graph-Cut RANSAC](https://cmp.felk.cvut.cz/~matas/papers/barath-2018-gc_ransac-cvpr.pdf) + degeneracy tests.\n",
+    "- USAC_MAGSAC – [MAGSAC++](https://arxiv.org/abs/1912.05909) implementation +  degeneracy tests.\n",
+    "- RANSAC -- OpenCV RANSAC implementation from the previous versions of the library, *no* degeneracy tests\n",
     "\n",
-    "If you are interesting in results for an individual datasets, here they are. \n",
+    "All OpenCV USAC methods also use SPRT-test for speeding-up the evaluation.\n",
     "\n",
     "## Results\n",
     "\n",
-    "Here are results for all 3 datasets. The lefter and upper is curve, the better. Dashed vertical line marks 0.5 sec time budget. Legend shows the method name and the optimal inlier threshold for the datasets: Phototourism, GoogleUrban and PragueParks respectively.\n",
+    "Here are results for all 3 datasets. The lefter and upper is curve, the better. Dashed vertical line marks 1/25 sec (\"realtime\") and 0.5 sec (challenge limit) time budget. Legend shows the method name and the optimal inlier threshold for the datasets: Phototourism, GoogleUrban and PragueParks respectively.\n",
     "\n",
-    "![image.png](2021-05-17-OpenCV-New-RANSACs_files/att_00000.png)\n",
+    "![](2021-05-17-OpenCV-New-RANSACs_files/att_00004.png \"Time-accuracy trade-off on all 3 datasets\")\n",
     "\n",
     "1. The first and main message -- **all new flags are much better than the old OpenCV implementation (green curve, worst results), which still a default option**.\n",
     "\n",
@@ -71,21 +71,24 @@
     "\n",
     "5. There is no point is using flag \"USAC_FAST\" it is always better to use USAC_DEFAULT, USAC_ACCURATE or USAC_MAGSAC.\n",
     "\n",
+    "6. USAC_MAGSAC is the only method, which optimal threshold is *the same across all datasets*. This is a valuable property for practice, as it requires the least tuning. \n",
     "\n",
-    "The graphs for the individual datasets are below.\n",
+    "\n",
+    "If you are interesting in results for an individual datasets, here they are. \n",
     "\n",
     "### Phototourism\n",
     "\n",
-    "![](2021-05-17-OpenCV-New-RANSACs_files/att_00001.png \"Time-accuracy trade-off on the Phototourism dataset\")\n",
+    "![image.png](2021-05-17-OpenCV-New-RANSACs_files/att_00005.png \"Time-accuracy trade-off on the Phototourism dataset\")\n",
     "\n",
     "\n",
     "### GoogleUrban\n",
     "\n",
-    "![](2021-05-17-OpenCV-New-RANSACs_files/att_00002.png \"Time-accuracy trade-off on the GoogleUrban dataset\")\n",
+    "![](2021-05-17-OpenCV-New-RANSACs_files/att_00007.png \"Time-accuracy trade-off on the GoogleUrban dataset\")\n",
+    "\n",
     "\n",
     "### PragueParks\n",
     "\n",
-    "![](2021-05-17-OpenCV-New-RANSACs_files/att_00003.png \"Time-accuracy trade-off on the PragueParks dataset\")\n",
+    "![](2021-05-17-OpenCV-New-RANSACs_files/att_00008.png \"Time-accuracy trade-off on the PragueParks dataset\")\n",
     "\n",
     "\n",
     "## Why do I tune and evaluate on the same set?\n",
