Fixing an issue with having >8000 features

--- a/_notebooks/2021-05-12-submitting-to-IMC2021-step-by-step.ipynb
+++ b/_notebooks/2021-05-12-submitting-to-IMC2021-step-by-step.ipynb
@@ -195,7 +195,7 @@
     "    img = cv2.cvtColor(cv2.imread(img_fname), cv2.COLOR_BGR2RGB)\n",
     "    if visualize:\n",
     "        plt.imshow(img)\n",
-    "    kpts = detector.detect(img, None)\n",
+    "    kpts = detector.detect(img, None)[:8000]\n",
     "    # We will not train anything, so let's save time and memory by no_grad()\n",
     "    with torch.no_grad():\n",
     "        timg = K.image_to_tensor(img, False).float()/255.\n",
