--- a/_notebooks/2021-07-30-Reviving-WxBS-benchmark.ipynb
+++ b/_notebooks/2021-07-30-Reviving-WxBS-benchmark.ipynb
@@ -54,14 +54,14 @@
     "\n",
     "As you can see on the animation below, the epipolar geometry estimation from our 13 correspondences is not stable and removing any of them results in noticable change. \n",
     "\n",
-    "![SegmentLocal](2021-07-28-Reviving-WxBS-benchmark_files/epi1.gif \"\")\n",
+    "![](2021-07-28-Reviving-WxBS-benchmark_files/epi1.gif)\n",
     "\n",
     "\n",
     "So, if even manually labeled corresposndences are not good enough, what can be done?\n",
     "\n",
     "First, simply add more correspondences, which are spread across image AND depth levels as even as possible. That is what I did recently, in order to make WxBS labeling better. However, it is not always possible -- sometimes you have lots of correspondence on \"faraway background plane\" and very little somewhere on foreground, see next picture.\n",
     "\n",
-    "![SegmentLocal](2021-07-28-Reviving-WxBS-benchmark_files/epi_harder.gif \"\")\n",
+    "![](2021-07-28-Reviving-WxBS-benchmark_files/epi_harder.gif)\n",
     "\n",
     "What else can be done? We can go other way round and *not provide any ground truth fundamental matrix at all*. \n",
     "Instead, we ask methods, which we evaluate, to give us such matrix *F_est*, then check, how many ground truth correspondences are consident with it. \n",
@@ -93,44 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: wxbs_benchmark in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (0.0.1)\n",
-      "Requirement already satisfied: packaging in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from wxbs_benchmark) (20.9)\n",
-      "Requirement already satisfied: pip in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from wxbs_benchmark) (21.1.2)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from packaging->wxbs_benchmark) (2.4.7)\n",
-      "Requirement already satisfied: kornia_moons in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (0.1.4)\n",
-      "Requirement already satisfied: matplotlib in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from kornia_moons) (3.4.2)\n",
-      "Collecting opencv-python-headless\n",
-      "  Using cached opencv_python_headless-4.5.3.56-cp39-cp39-macosx_11_0_arm64.whl (10.7 MB)\n",
-      "Requirement already satisfied: torch in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from kornia_moons) (1.10.0a0+git46595a9)\n",
-      "Requirement already satisfied: kornia in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from kornia_moons) (0.5.4)\n",
-      "Requirement already satisfied: numpy in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from kornia->kornia_moons) (1.21.1)\n",
-      "Requirement already satisfied: typing_extensions in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from torch->kornia_moons) (3.10.0.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from matplotlib->kornia_moons) (2.4.7)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from matplotlib->kornia_moons) (8.2.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from matplotlib->kornia_moons) (1.3.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from matplotlib->kornia_moons) (2.8.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from matplotlib->kornia_moons) (0.10.0)\n",
-      "Requirement already satisfied: six in /opt/homebrew/Caskroom/miniforge/base/envs/python39/lib/python3.9/site-packages (from cycler>=0.10->matplotlib->kornia_moons) (1.16.0)\n",
-      "Installing collected packages: opencv-python-headless\n",
-      "Successfully installed opencv-python-headless-4.5.3.56\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install wxbs_benchmark\n",
     "!pip install kornia_moons"
@@ -264,25 +229,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Methods tested:\n",
+    "## Methods tested\n",
     "\n",
-    "#### Local features without learned matching.\n",
+    "\n",
+    "### Local features without learned matching.\n",
     "\n",
     "[RootSIFT](https://www.robots.ox.ac.uk/~vgg/publications/2012/Arandjelovic12/arandjelovic12.pdf) (ICCV1999 - CVPR-2012), [DoG](https://www.cs.ubc.ca/~lowe/papers/ijcv04.pdf)+[HardNet](https://arxiv.org/pdf/1705.10872.pdf) (NeurIPS 2017), [R2D2](https://arxiv.org/abs/1906.06195) (NeurIPS 2019), [DISK](https://arxiv.org/abs/2006.13566) (NeurIPS 2020).\n",
     "\n",
     "\n",
-    "#### Local features with learned matching.\n",
+    "### Local features with learned matching.\n",
     "\n",
     "[SuperGlue](https://arxiv.org/abs/1911.11763) (CVPR2020) uses attention-based graph neural network to match SuperPoint local features.\n",
     "\n",
-    "#### Dense matching\n",
+    "### Dense matching\n",
     "\n",
     "[PDCNet](https://prunetruong.com/research/pdcnet) (CVPR 2021). On top of pretrained ImageNet coarse-to-fine feature correlation,  PDCNet predicts a dense flow and a confidence for each pixel. Trained on huge dataset with synthetic warps.\n",
     "\n",
     "[Patch2pix](https://arxiv.org/abs/2012.01909) (CVPR 2021). Similarly to PDCNet, patch2pix is uses pretrained ImageNet features to get the initial corresponcences. Then the matches are progressively refined or rejected with a regressor network.\n",
     "\n",
     "\n",
-    "#### Dense matching with transformers\n",
+    "### Dense matching with transformers\n",
     "\n",
     "[COTR](https://arxiv.org/abs/2103.14167), (ICCV2021). Given the pixel location in a query image, COTR finds a corresponing location in the reference image. It operated on the 16x16 feature map produced by pretrained ImageNet model, which then are fed together with a positional embeddings to a transformer-based regressor.\n",
     "It is also the slowest method among evaluated - because you have to run it *per each pixel separately*, if want dense correspondences.\n",
@@ -291,7 +257,7 @@
     "The second difference, is that, unlike all other methods, which are using ImageNet-pretrained models as a feature backbone, LoFTR trains ResNet18 *from scratch* .\n",
     "\n",
     "\n",
-    "### Results & Discussion\n",
+    "## Results & Discussion\n",
     "\n",
     "![image.png](2021-07-28-Reviving-WxBS-benchmark_files/att_00005.png)\n",
     "\n",
@@ -306,7 +272,7 @@
     "\n",
     "P.S. I would also like to thank Prune Truong, who helped me to debug my originally wrong run of the PDCNet.\n",
     "\n",
-    "## Qualiative examples\n",
+    "### Qualiative examples\n",
     "\n",
     "Here are some examples of how different methods work on the same image pairs.\n",
     "\n",
