--- a/_notebooks/2021-07-30-Reviving-WxBS-benchmark.ipynb
+++ b/_notebooks/2021-07-30-Reviving-WxBS-benchmark.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# WxBS: Relaunching challenging benchmark for Image Matching\n",
+    "# \"WxBS: Relaunching challenging benchmark for Image Matching\"\n",
     "> \"And I mean really challenging\"\n",
+    "\n",
     "- toc: false\n",
     "- image: images/2loftr_match.png\n",
     "- branch: master\n",
