--- a/_notebooks/2021-07-30-Reviving-WxBS-benchmark.ipynb
+++ b/_notebooks/2021-07-30-Reviving-WxBS-benchmark.ipynb
@@ -8,7 +8,7 @@
     "> \"And I mean really challenging\"\n",
     "\n",
     "- toc: false\n",
-    "- image: images/2loftr_match.png\n",
+    "- image: images/loftr_match.png\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
