Added DFM to WxBS

--- a/_notebooks/2021-07-30-Reviving-WxBS-benchmark.ipynb
+++ b/_notebooks/2021-07-30-Reviving-WxBS-benchmark.ipynb
@@ -248,6 +248,8 @@
     "\n",
     "[Patch2pix](https://arxiv.org/abs/2012.01909) (CVPR 2021). Similarly to PDCNet, patch2pix is uses pretrained ImageNet features to get the initial corresponcences. Then the matches are progressively refined or rejected with a regressor network.\n",
     "\n",
+    "[DFM](https://arxiv.org/abs/2106.07791) (CVPRW 2021). Like PDCNet and Patch2pix, DFM uses ImageNet-pretrained and frozen VGGNet backbone as dense feature extractor. Unlike them, DFM does not requite any training and relies on simple handcrafted coarse-to-fine matching from conv5 to conv1. \n",
+    "\n",
     "\n",
     "### Dense matching with transformers\n",
     "\n",
@@ -260,18 +262,33 @@
     "\n",
     "## Results & Discussion\n",
     "\n",
-    "![image.png](2021-07-28-Reviving-WxBS-benchmark_files/att_00005.png)\n",
+    "![image.png](2021-07-30-Reviving-WxBS-benchmark_files/att_00000.png)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The clear leader is LoFTR, then we have (patch2pix, COTR and SuperGlue) group, followed by (PDCNet, DISK, R2D2). Then DoG-HardNet and RootSIFT, where latter has barely matched couple of image pairs correctly.\n",
     "\n",
     "I have no idea, why LoFTR is so good, my guesses would be richer training data and training the backbone from scratch, instead of relying on ImageNet feaures. I am also quite surprised by the great performance of the patch2pix, which probably can be improved even more, if the backbone would be at least fine-tuned.\n",
+    "\n",
+    "Another surprise is a great performance of the DFM matcher, which is slightly better than PDCNet and worse (but comparable) than COTR. My hypothesis is that all this methods rely on the same ImageNet backbone: if they fail, all the methods fail.\n",
     "\n",
     "Regarding SuperGlue - one of my guesses is that original SuperPoint features were not trained for different illuminations. Moreover, in some images, there just not enough matching corners -  when I was annotating the correspondences, I have to use also \"center of the blobs\".\n",
     "\n",
     "\n",
     "Finally, I would like to that than even excellent LofTR result is far from the ideal -- there are stil tens of pairs, where it fails. \n",
     "\n",
-    "P.S. I would also like to thank Prune Truong, who helped me to debug my originally wrong run of the PDCNet.\n",
+    "P.S. I would also like to thank Prune Truong and Ufuk Efe who helped me to debug my originally wrong run of the PDCNet and DFM respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Qualiative examples\n",
     "\n",
