--- a/_notebooks/2021-09-04-review-of-pseudoGT-limitations.ipynb
+++ b/_notebooks/2021-09-04-review-of-pseudoGT-limitations.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# \"Review of On the Limits of Pseudo Ground Truth in Visual Camera Re-localisation\"\n",
-    "> \"Short review\"\n",
+    "\n",
+    "> \"Get better data!\"\n",
     "- toc: false\n",
     "- image: images/pGT.png\n",
     "- branch: master\n",
@@ -59,7 +60,7 @@
     "*Does it affect results to be in favor of the (family of) methods, which were used to generate the pseugo GT?*\n",
     "\n",
     "\n",
-    "![](2021-09-04-review-of-pseudoGT-limitations_files/att_00000.png \"Figure 1 from paper. 'Visualisation of the same scene reconstructed by two different reference algorithms. We show the trajectories of test images estimated by state-of-the-art visual localisation algorithms (left) and the percentage of images localised within 1cm and 1◦ of error w.r.t. the pseudo ground truth (right, higher is better). While the underlying 3D scene models are very similar, the relative ranking of methods is inverted. In this paper, we show that the reference algorithm used to create the pseudo ground truth has a significant impact on which method achieves the best results'\")\n",
+    "![](2021-09-04-review-of-pseudoGT-limitations_files/att_00000.png \"Figure 1 from paper. Visualisation of the same scene reconstructed by two different reference algorithms. We show the trajectories of test images estimated by state-of-the-art visual localisation algorithms (left) and the percentage of images localised within 1cm and 1◦ of error w.r.t. the pseudo ground truth (right, higher is better). While the underlying 3D scene models are very similar, the relative ranking of methods is inverted. In this paper, we show that the reference algorithm used to create the pseudo ground truth has a significant impact on which method achieves the best results\")\n",
     "\n",
     "\n",
     "\n",
