--- a/_notebooks/2021-09-04-review-of-pseudoGT-limitations.ipynb
+++ b/_notebooks/2021-09-04-review-of-pseudoGT-limitations.ipynb
@@ -68,7 +68,7 @@
     "Let me give you an example.\n",
     "\n",
     "Our Image Matching Challenge 2019, [2020](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2021/05/14/IMC2020-competition-recap.html) [2021](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2021/05/12/submitting-to-IMC2021-step-by-step.html) does exactly this: the camera pose are reconstructed with [COLMAP](https://colmap.github.io) 3d reconstruction software given thousands of images. COLMAP is based on SIFT local features and LO-RANSAC for the pose stimation. \n",
-    "![](2021-09-04-review-of-pseudoGT-limitations_files/att_00001.png \"(Pseudo)-ground truth generation and benchmark pipeline for the Image Matching Challenge\")\n",
+    "![](2021-09-04-review-of-pseudoGT-limitations_files/att_00001.png \"Pseudo-ground truth generation and benchmark pipeline for the Image Matching Challenge\")\n",
     "\n",
     "\n",
     "\n",
