typo and new thumbnail

--- a/_notebooks/2021-09-04-review-of-pseudoGT-limitations.ipynb
+++ b/_notebooks/2021-09-04-review-of-pseudoGT-limitations.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "> \"Get better data!\"\n",
     "- toc: false\n",
-    "- image: images/pGT.png\n",
+    "- image: images/get_better_data.png\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
@@ -81,7 +81,7 @@
     "\n",
     "# SfM versus Dense SLAM\n",
     "\n",
-    "The \"[On the Limits...](https://arxiv.org/abs/2109.00524)\" asks the different question, than the one we have answered in IMC paper. *While, the GT might be not biased towards specific local feature, it can be biased toward the higher-level algorithm -- Structure-from-Motion (SfM)*. But the (sparse) SfM is not the only way how we can obtain camera poses from the collection of images -- one could use (dense) Depth-based SLAM. Are the poses we got from them the same? \n",
+    "The \"[On the Limits...](https://arxiv.org/abs/2109.00524)\" asks the different question, than the one we have answered in IMC paper. *While, the GT might be not biased towards specific local feature, it can be biased towards the higher-level algorithm -- Structure-from-Motion (SfM)*. But the (sparse) SfM is not the only way how we can obtain camera poses from the collection of images -- one could use (dense) Depth-based SLAM. Are the poses we got from them the same? \n",
     "\n",
     "The answer is: **no**, they are not the same!\n",
     "\n",
@@ -123,10 +123,10 @@
     "\n",
     "One thing, which paper focuses on is how the \"test\" pGT is generated. However, even the bigger impact can be from the fact that *training* data may conflict with the poses, that algorithm estimates. \n",
     "\n",
-    "Imagine the augmented reality scenario, where one needs to draw the (virtual) teddy bear on the coach. In that case we actually don't care if the camera pose estimate is correct, or if our model of the room is correct. What we care about, is how naturally looking will be position of the Teddy bear (or Pikachu). \n",
+    "Imagine the augmented reality scenario, where one needs to draw the (virtual) teddy bear on the coach. In that case we actually don't care if the camera pose estimate is correct, or if our model of the room is correct. What we care about, is how naturally looking will be position of the Teddy bear (or Pikachu). It also important that bear not jumps around when we move our camera slightly.\n",
     "\n",
     "Given the images and results in the paper, it seems that (learning-based) DSAC can suits this much better than (non-learning) AS. That is also stated in the paper conclusions. \n",
-    "In the same time, it seems that the variance of the pose estimates is smaller for the SfM pGT than for the SLAM.\n",
+    "In the same time, it seems that the variance of the pose estimates is smaller for the SfM pGT than for the SLAM even for DSAC.\n",
     "\n",
     "However, I would also like to see a paper, which studies how the error/bias/variance in the training data affects the different algorithms, so they could adapt to use bad data better, in more detail. \n",
     "\n",
@@ -134,8 +134,7 @@
     "\n",
     "The paper is thought-provoking and I hope our community will read it and think about it. We also need to pay a way more attention to our data-gathering practice, because it really makes a difference.\n",
     "\n",
-    "P.S. Thanks to [Eric](https://twitter.com/eric_brachmann) for sending me additional visualizations, which were not in the arXiv paper.\n",
-    "\n"
+    "P.S. Thanks to [Eric](https://twitter.com/eric_brachmann) for sending me additional visualizations, which were not in the arXiv paper."
    ]
   }
  ],
