--- a/_notebooks/2022-02-05-DISC21-recap.ipynb
+++ b/_notebooks/2022-02-05-DISC21-recap.ipynb
@@ -37,7 +37,7 @@
     "> We asked manual editors to perform “air-gap” transformations, where the picture is displayed or printed out, and re-captured with a camera or mobile phone. It is a quite common image attack, that is hard to reproduce automatically or even with an image editor like the GIMP. Figure 8 shows an example air-gap augmentation (the zebra). The effect is a combination of over-exposure, geometric framing and blurriness on the picture.\n",
     "\n",
     "\n",
-    "![](2022-02-05-DISC21-recap_files/att_00002.png \"Test set (Phase 2)  transformations. Taken from DISC paper\")\n",
+    "![](2022-02-05-DISC21-recap_files/att_00002.png \"Test set Phase 2 transformations. Taken from DISC paper\")\n",
     "\n",
     "\n",
     "The paper also provides several baselines, mostly based on global and local descriptors\n",
@@ -122,7 +122,7 @@
     "\n",
     "Note that before descriptor stretching, results are much weaker than in 1st and 2nd place, but after the post-processing, the margin shrinks\n",
     "\n",
-    "![](2022-02-05-DISC21-recap_files/att_00014.png \"The ablation studye. Supervised or Unsupervised denotes the supervised pre-training or unsupervised pre-training is used, respectively. + Des-Str denotes adding descriptor stretching strategy. + Det denotes adding overlay detection (YOLOv5 [15]). + Multi denotes using multi-scale testing.\")\n",
+    "![](2022-02-05-DISC21-recap_files/att_00014.png \"The ablation studye. Supervised or Unsupervised denotes the supervised pre-training or unsupervised pre-training is used, respectively. Des-Str denotes adding descriptor stretching strategy. Det denotes adding overlay detection YOLOv5. Multi denotes using multi-scale testing.\")\n",
     "\n",
     "[arXiv](https://arxiv.org/abs/2111.08004), [github](https://github.com/WangWenhao0716/ISC-Track2-Submission)\n",
     "\n"
@@ -180,13 +180,14 @@
     "This method is probably the most hand-engineered. \n",
     "\n",
     "\n",
-    "![](2022-02-05-DISC21-recap_files/att_00018.png \"Overall pipeline, which consist of separate overlay-detection step, image retrieval with global(EsViT) and local descriptors (SIFT) and finally their combination\")\n",
+    "![](2022-02-05-DISC21-recap_files/att_00018.png \"Overall pipeline, which consist of separate overlay-detection step, image retrieval with global EsViT and local descriptors - SIFT and finally their combination\")\n",
     "\n",
     "\n",
     "\n",
     "1. The images are pre-processed with overlay-detection -- out-of-the-box YOLOv5. Detected overlays are treated as a separate images.\n",
     "2. The global descriptor EsViT (Swin-B) is pretrained in self-supervised fashion on ImageNet, then with contrastive loss on the challange dataset, with hard-negative memory bank.\n",
-    "![image.png](2022-02-05-DISC21-recap_files/att_00019.png)\n",
+    "\n",
+    "![](2022-02-05-DISC21-recap_files/att_00019.png)\n",
     "\n",
     "\n",
     "3. Resize images to 300px -> SIFT features (~600 per image) -> 600M descriptors. Use brute-force search in faiss with fp16 precision. That takes 165Gb memory, fit with 8 V100 GPUs. Threshold the descriptor distance first, the number of matched features second.\n",
