--- a/_notebooks/2022-07-05-IMC2022-Recap.ipynb
+++ b/_notebooks/2022-07-05-IMC2022-Recap.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "So, the general pipeline is shown below. The following steps are present in the most of solutions:\n",
     "\n",
-    "![](2022-06-29-IMC2022_files/general-scheme-1c.pdf \"Common pipeline among the top-performers of IMC-2022\")\n",
+    "![](2022-06-29-IMC2022_files/general-scheme-1c.png \"Common pipeline among the top-performers of IMC-2022\")\n",
     "\n",
     "\n",
     "\n",
