--- a/_notebooks/2023-01-04-UnsuperPoint-family.ipynb
+++ b/_notebooks/2023-01-04-UnsuperPoint-family.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (Un)SuperPoint family: who are they?\n",
+    "# Un-SuperPoint family: who are they?\n",
     "> \"does it worth to know them?\"\n",
     "\n",
     "- toc: false\n",
@@ -47,13 +47,6 @@
     "\n",
     "I'll first do a short review of how are they different, and the benchmark will be in the last section."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -211,13 +204,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -267,11 +253,6 @@
     "This blogpost is supported by CTU in Prague RCI computing cluster from `OP VVV funded project CZ.02.1.01/0.0/0.0/16 019/0000765 “Research Center for Informatics”` grant. Really, it took ~2 compute days to tune all those hyperparams and do tests. \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
