--- a/_notebooks/2023-01-04-UnsuperPoint-family.ipynb
+++ b/_notebooks/2023-01-04-UnsuperPoint-family.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Un-SuperPoint family: who are they?\n",
+    "# \"Un-SuperPoint family: who are they?\"\n",
     "> \"does it worth to know them?\"\n",
     "\n",
     "- toc: false\n",
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optimal hyperparamers:\n",
+    "## Optimal hyperparamers\n",
     "\n",
     "SNN - 2nd nearest neighbor threshold, PT - PhotoTourism, PP - PragueParks. \n",
     "\n",
