--- a/_notebooks/2023-01-04-UnsuperPoint-family.ipynb
+++ b/_notebooks/2023-01-04-UnsuperPoint-family.ipynb
@@ -150,7 +150,7 @@
     "\n",
     "### Stereo task\n",
     "\n",
-    "![](2022-12-31-UnsuperPoint-family_files/map_stereo_pp_pt_2k.pdf \"Stereo task results. MagicLeap SuperPoint results are shown with dashed line.\")"
+    "![](2022-12-31-UnsuperPoint-family_files/map_stereo_pp_pt_2k.png \"Stereo task results. MagicLeap SuperPoint results are shown with dashed line.\")"
    ]
   },
   {
@@ -169,7 +169,7 @@
    "source": [
     "### Multiview task\n",
     "\n",
-    "![](2022-12-31-UnsuperPoint-family_files/map_mv_pp_pt_2k.pdf \"Multiview task results. MagicLeap SuperPoint results are shown with dashed line.\")\n"
+    "![](2022-12-31-UnsuperPoint-family_files/map_mv_pp_pt_2k.png \"Multiview task results. MagicLeap SuperPoint results are shown with dashed line.\")\n"
    ]
   },
   {
@@ -217,7 +217,7 @@
     "3. The `v2` model of the KP2D is much better than then rest. `v0` and `v1` might be bugged, or require code changes to be run properly maybe?\n",
     "\n",
     "\n",
-    "![](2022-12-31-UnsuperPoint-family_files/map_stereo_pt_2k_val_kp2d.pdf \"KP2D versions comparison on validation set.\")"
+    "![](2022-12-31-UnsuperPoint-family_files/map_stereo_pt_2k_val_kp2d.png \"KP2D versions comparison on validation set.\")"
    ]
   },
   {
